febs-cloud/k8s/ingress/ingress-nginx.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: nginx.mrbird.cn
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx-service
              servicePort: 8080
